--- a/the-webapp/src/App.css
+++ b/the-webapp/src/App.css
@@ -1,18 +1,25 @@
 .App {
+  display: flex;
+  flex-direction: row;
   text-align: center;
   justify-content: center;
   align-items: center;
+  gap: 2em;
 }
 
+
 input{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   border: none;
   border-radius: 8px;
-  background: gainsboro;
-  width: 50vw;
+  background: #dcdcdc;
+  width: 35svw;
   height: 3vh;
   padding: 6px;
-  justify-items: center;
-  align-items: center;
+
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 12px;
 }
@@ -24,39 +31,4 @@ input::placeholder{
 
 input:focus::placeholder{
   color: transparent;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
