--- a/the-webapp/src/index.css
+++ b/the-webapp/src/index.css
@@ -1,6 +1,5 @@
 body {
-  background-color: #051C2C;
-  background-image: url(./outerspc.avif);
+  background-color: #f9f8fa;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
