--- a/the-webapp/src/FileUpload.css
+++ b/the-webapp/src/FileUpload.css
@@ -1,46 +1,50 @@
-.files input {
-    outline: 2px dashed #92b0b3;
-    outline-offset: -10px;
-    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
-    transition: outline-offset .15s ease-in-out, background-color .15s linear;
-    padding: 120px 0px 85px 35%;
-    text-align: center !important;
-    margin: 0;
-    width: 100% !important;
+.upload {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
-.files input:focus{     outline: 2px dashed #92b0b3;  outline-offset: -10px;
-    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
-    transition: outline-offset .15s ease-in-out, background-color .15s linear; border:1px solid #92b0b3;
- }
-.files{ position:relative}
-.files:after {  pointer-events: none;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 50px;
-    right: 0;
-    height: 56px;
-    content: "";
-    display: block;    
-    background-image: url(https://cdn-icons-png.flaticon.com/512/126/126477.png);
 
-    margin: 0 auto;
-    background-size: 100%;
-    background-repeat: no-repeat;
+.upload form {
+    height: 300px;
+    width: 300px;
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    border-radius: 5px;
+    outline-offset: -10px;
 }
-.color input{ background-color:#f1f1f1;}
-.files:before {
-    position: absolute;
-    bottom: 10px;
-    left: 0;  pointer-events: none;
-    width: 100%;
-    right: 0;
-    height: 57px;
-    content: " or drag it here. ";
-    display: block;
-    margin: 0 auto;
-    color: #2ea591;
-    font-weight: 600;
-    text-transform: capitalize;
+
+.upload h1 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.upload button {
+    font-size: 13px;
+    width: 60px;
+    padding: 7px;
+    border-radius: 9px;
+    border: none;
+    outline: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-sizing: border-box;
+    background-color: #b8ccfa;
+}
+
+.upload form input {
+    height: 90px;
+    padding-top: 70px;
+    padding-left: 50px;
     text-align: center;
+    background-color: none;
+    outline: 2px dashed #b8ccfa;
+    outline-offset: 5px;
+    border-radius: 12px;
+}
+
+.upload form button:hover {
+    background-color: #7ea3f9;
 }
