--- a/the-webapp/src/SubmitUserQueryButton.css
+++ b/the-webapp/src/SubmitUserQueryButton.css
@@ -1,53 +1,71 @@
+.container {
+    width: 650px;
+    height: 97vh;
+    display: flex;
+    flex-direction: column;
+    justify-self: end;
+    background-color: #dcdcdc;
+}
 
-.pill {
-    font-size: 12px;
-    padding: 8px;
+.header {
+    height: 70px
+}
+
+.header h1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.body {
+    flex: 1;
+    color: whitesmoke;
+    background-color: whitesmoke;
+    padding: 20px;
+}
+
+
+.footer {
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 4px;
+}
+
+.footer form {
+    display: flex;
+    justify-content: space-around;
+    padding-left: 10px;
+    padding-right: 5px;
+}
+
+.footer form input {
+    flex: 1;
+    height: 20px;
+    border: none;
+    border-radius: 7px;
+    outline: none;
+    background: #c1c1c1;
+    padding: 6px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+}
+
+.footer form button {
+    font-size: 13px;
+    padding: 7px;
     margin: 0.25em;
-    border-radius: 11px;
+    border-radius: 9px;
     border: none;
     outline: none;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
-    background-color: #f99fcc;
+    background-color: #b8ccfa;
 }
 
-.pill:hover{
-    background-color: #f57bb8;
+.footer form button:hover {
+    background-color: #7ea3f9;
 }
-
-userInput {
-    display: flex-grow;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 8px;
-    background: #dcdcdc;
-    width: 35svw;
-    height: 3vh;
-    padding: 6px;
-  
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 12px;
-}
-
-.output {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    border: 2px transparent;
-    height: 200px;
-    width: 700px;
-    border-radius: 7px;
-    background-color: #dcdcdc;
-  }
-
-  .chat {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    gap: 2em;
-  }
