--- a/the-webapp/src/FileUpload.css
+++ b/the-webapp/src/FileUpload.css
@@ -1,10 +1,7 @@
 .upload {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
+    height: 460px;
+  }
+  
 .upload form {
     height: 300px;
     width: 300px;
@@ -43,8 +40,11 @@
     outline: 2px dashed #b8ccfa;
     outline-offset: 5px;
     border-radius: 12px;
-}
-
+  }
 .upload form button:hover {
     background-color: #7ea3f9;
 }
+.success {
+    color: green;
+    margin-top: 10px;
+  }
