--- a/the-webapp/src/FileUpload.css
+++ b/the-webapp/src/FileUpload.css
@@ -1,50 +1,180 @@
+body {
+  background-color: #0f123b;
+  color: #fff;
+}
+
 .upload {
-    height: 460px;
-  }
-  
-.upload form {
-    height: 300px;
-    width: 300px;
-    margin: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    border-radius: 5px;
-    outline-offset: -10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-.upload h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #1c1f4b;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  animation: slide-up 0.5s ease-in-out;
 }
 
-.upload button {
-    font-size: 13px;
-    width: 60px;
-    padding: 7px;
-    border-radius: 9px;
-    border: none;
-    outline: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-sizing: border-box;
-    background-color: #b8ccfa;
+h1 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
-.upload form input {
-    height: 90px;
-    padding-top: 70px;
-    padding-left: 50px;
-    text-align: center;
-    background-color: none;
-    outline: 2px dashed #b8ccfa;
-    outline-offset: 5px;
-    border-radius: 12px;
-  }
-.upload form button:hover {
-    background-color: #7ea3f9;
+input[type="file"] {
+  margin-bottom: 1rem;
+  color: transparent;
+  display: none;
 }
+
+input[type="text"] {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 0.25rem;
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  font-size: 1rem;
+  width: 100%;
+  max-width: 20rem;
+  background-color: #fff;
+  color: #0f123b;
+}
+
+.custom-file-upload {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  width: 100%;
+  max-width: 20rem;
+  background-color: #fff;
+  color: #0f123b;
+}
+
+.custom-file-upload label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+.upload-icon {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  color: #fff;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  background-color: #0077ff;
+  color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #005ae6;
+}
+
+.error {
+  color: #ff0000;
+  margin-top: 1rem;
+}
+
 .success {
-    color: green;
-    margin-top: 10px;
+  color: #00ff00;
+  margin-top: 1rem;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20rem;
+  height: rem;
+  background-color: #fff;
+  animation: logo-anim 1s ease-in-out backwards;
+  margin: 0 auto;
+}
+
+.heading {
+  font-size: 3rem;
+  margin-top: 2rem;
+  animation: heading-anim 1s ease-in-out;
+}
+
+.intro-paragraph {
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  opacity: 0;
+  animation: intro-anim 1s ease-in-out forwards;
+}
+
+@keyframes slide-up {
+  from {
+    transform: translateY(2rem);
+    opacity: 0;
   }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes logo-anim {
+  from {
+    opacity: 0;
+    transform: translateY(20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes heading-anim {
+  from {
+    transform: translateY(-2rem);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes intro-anim {
+  from {
+    transform: translateY(2rem);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.intro-paragraph:nth-of-type(1) {
+  animation-delay: 0.5s;
+}
+
+.intro-paragraph:nth-of-type(2) {
+  animation-delay: 1s;
+}
