--- a/the-webapp/src/ChatComponent.css
+++ b/the-webapp/src/ChatComponent.css
@@ -1,44 +1,41 @@
 .container {
-    width: 90vw;
-    height: 100vh;
+    width: 95vw;
+    height: 95vh;
     display: flex;
     flex-direction: column;
     justify-self: end;
     color: whitesmoke;
-    background-color: #0f123b;
+    background-color: #090b24;
 }
 
 .header {
-    height: 70px
+    height: 70px;
 }
 
 .header h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .namespace {
     display: flex;
     flex-direction: column;
     color: whitesmoke;
-    background-color: #0f123b;
+    background-color: #090b24;
     padding: 7px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .cs-message__content {
     box-sizing: border-box;
-    color: rgba(0, 0, 0, .87);
-    background-color: #b8ccfa;
+    color: whitesmoke;
+    background-color: #6871F0;
     margin-top: 0;
     padding: 0.6em 0.9em;
     border-radius: 0.7em 0.7em 0.7em 0em;
     white-space: pre-wrap;
     overflow-wrap: anywhere;
     word-break: break-word;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: normal;
     font-size: .91em;
     font-feature-settings: normal;
@@ -46,16 +43,16 @@
 }
 
 .cs-message--outgoing .cs-message__content {
-    color: rgba(0, 0, 0, .87);
-    background-color: #7ca1f6;
+    color: whitesmoke;
+    background-color: #1019A3;
     border-radius: 0.7em 0.7em 0em 0.7em;
 }
 
 .body {
     flex: 1;
     overflow-y: auto;
-    color: black;
-    background-color: 0f123b;
+    color: #090b24;
+    background-color: #090b24;
     padding: 20px;
 }
 
@@ -78,32 +75,42 @@
 .footer form input {
     flex-grow: 1;
     align-self: center;
-    border: whitesmoke solid 2px;
-    border-radius: 7px;
-    outline: none;
-    background: #0f123b;
-    color: whitesmoke;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+    background: #090b24;
+    color: var(--text-color);
     padding: 6px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: .91em;
+    box-shadow: 0 0.5rem 1rem rgba(20, 15, 82, 0.618);
+    font-size: 1rem;
+}
+
+.footer form input:hover,
+.footer form input:focus {
+  outline: none;
+  border-color: #1c1f4b;
+  outline-color: #1c1f4b;
+  background-color: #1c1f4b;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .footer form button {
     align-self: center;
-    font-size: .91em;
-    padding: 7px;
+    font-size: 1rem;
+    padding: 9px;
     margin: 0.25em;
-    border: whitesmoke solid 2px;
-    border-radius: 7px;
+    border: none;
+    border-radius: 0.5rem;
     outline: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
-    background-color: #0f123b;
+    background-color: #090f5d;
     color: whitesmoke;
+    transition: all 0.3s ease-in-out;
 }
 
 .footer form button:hover {
-    background-color: #7ea3f9;
+    background-color: #1c1f4b;
+    border-color: #4f82f8;
+    color: #4f82f8;
 }
 
 .FileAdd {
