--- a/the-webapp/src/FileAdd.css
+++ b/the-webapp/src/FileAdd.css
@@ -19,14 +19,22 @@
   justify-content: space-evenly;
   align-items: center;
   border-radius: 7px;
-  border: whitesmoke solid 2px;
+  border: 1px solid #ccc;
   border-radius: 7px;
   margin-left: 0rem;
   margin-right: 0.5rem;
   background-color: #0f123b;
+  box-shadow: 0 0.5rem 1rem rgba(20, 15, 82, 0.618);
+  transition: all 0.3s ease-in-out;
 }
 
-.file-submit form button{
+.combined-button:hover {
+  background-color: #1c1f4b;
+  border-color: #1c1f4b;
+  border-color: #4f82f8;
+}
+
+.file-submit form button {
   align-self: center;
   padding: 7px;
   padding-right: 5px;
@@ -35,10 +43,13 @@
   border: none;
   outline: none;
   font-size: .91em;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   box-sizing: border-box;
   background-color: #0f123b;
   color: whitesmoke;
+}
+
+.file-submit form button:hover {
+color: #4f82f8;
 }
 
 .new-file-upload {
@@ -61,7 +72,10 @@
 }
 
 .uploadIcon:hover {
-  background-color: #7ea3f9;
+  background-color: #1c1f4b;
+  border-color: #1c1f4b;
+  border-color: #4f82f8;
+  color: #4f82f8;
 }
 
 .file-submit form input[type="file"] {
@@ -88,12 +102,11 @@
 }
 
 
-.popup-content{
+.popup-content {
   background-color: white;
   padding: 20px;
   border-radius: 5px;
   max-width: 400px;
-  text-align: center; 
-  box-shadow: 0 2px 4px #c1c1c1; 
+  text-align: center;
+  box-shadow: 0 2px 4px #c1c1c1;
 }
-
