--- a/the-webapp/src/FileUpload.css
+++ b/the-webapp/src/FileUpload.css
@@ -30,7 +30,7 @@ body {
   opacity: 0;
   animation: slide-up 0.5s ease-in-out forwards, form-anim 0.7s ease-in-out 1s forwards;
 
-  
+
 }
 
 .upload form {
@@ -58,13 +58,13 @@ h1 {
   color: whitesmoke;
   display: none;
 }
+
 .upload form input[type="text"] {
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
-  
   font-size: 1rem;
   width: 100%;
   max-width: 20rem;
@@ -73,15 +73,13 @@ h1 {
   box-shadow: 0 0.5rem 1rem rgba(20, 15, 82, 0.618);
 }
 
-input[type="text"]:hover,
-input[type="text"]:focus {
+.upload form input[type="text"]:hover,
+.upload form input[type="text"]:focus {
   outline: none;
   border-color: #1c1f4b;
   outline-color: #1c1f4b;
   background-color: #1c1f4b;
   transition: background-color 0.3s ease-in-out;
-  
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .custom-file-upload {
@@ -99,10 +97,6 @@ input[type="text"]:focus {
 .custom-file-upload:hover {
   background-color: #1c1f4b;
   border-color: #1c1f4b;
-  
-}
-
-.custom-file-upload:hover {
   border-color: #4f82f8;
 }
 
@@ -112,8 +106,8 @@ input[type="text"]:focus {
   color: var(--text-color);
   text-align: center;
 }
+
 .upload form button {
-  
   background-color: #090f5d;
   color: var(--text-color);
   border: none;
@@ -122,13 +116,12 @@ input[type="text"]:focus {
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
-
   transition: all 0.3s ease-in-out;
 }
 
-button:hover {
-  
-  background-color: #313791;
+.upload form button:hover {
+  background-color: #1c1f4b;
+  color: #4f82f8;
 }
 
 .error {
@@ -213,6 +206,7 @@ button:hover {
     opacity: 0;
     transform: translateY(2rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -233,12 +227,16 @@ button:hover {
   background-color: var(--text-color);
   animation: blink 1s infinite;
 }
+
 @keyframes blink {
-  0%, 50% {
+
+  0%,
+  50% {
     opacity: 1;
   }
-  50.1%, 100% {
+
+  50.1%,
+  100% {
     opacity: 0;
   }
 }
-
