--- a/the-webapp/src/FileUpload.css
+++ b/the-webapp/src/FileUpload.css
@@ -11,10 +11,14 @@ body {
   font-size: 1rem;
   margin-top: 2rem;
   margin-bottom: 0.5rem;
+  word-spacing: 0.1rem;
+
   opacity: 0;
   animation: intro-anim 0.7s ease-in-out forwards;
   --tw-text-opacity: 1;
-  color: #b9b9b9;
+  color: #d8d8d8;
+  max-width: 800px;
+  text-align: left;
 }
 
 .upload {
@@ -83,12 +87,12 @@ h1 {
 }
 
 .custom-file-upload {
-  display: flex;
+  display: flex ;
   align-items: center;
   justify-content: center;
   height: 3rem;
-  width: 10rem;
-  border: 1px solid #ccc;
+  width: auto;
+  border: 1px solid #c3b6b6;
   border-radius: 0.5rem;
   box-shadow: 0 0.5rem 1rem rgba(20, 15, 82, 0.618);
   transition: all 0.3s ease-in-out;
@@ -222,6 +226,7 @@ h1 {
 }
 
 
+
 .blinking-cursor {
   margin-left: 5px;
   background-color: var(--text-color);
@@ -240,3 +245,38 @@ h1 {
     opacity: 0;
   }
 }
+
+.intro-paragraph-2 {
+  font-size: 0.8rem;
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+  opacity: 0;
+  animation: intro-anim 0.7s ease-in-out forwards;
+  color: #d8d8d8;
+  max-width: 800px;
+  text-align: left;
+}
+
+.intro-paragraph-2 h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  color: #e0e0e0;
+}
+
+.intro-paragraph-2 p {
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+
+.intro-paragraph-2 a {
+  color: #4f82f8;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.intro-paragraph-2 a:hover {
+  color: #1c1f4b;
+}
+
