--- a/the-webapp/src/ChatComponent.css
+++ b/the-webapp/src/ChatComponent.css
@@ -6,6 +6,7 @@
     justify-self: end;
     color: whitesmoke;
     background-color: #090b24;
+    
 }
 
 .header {
@@ -35,18 +36,24 @@
     border-radius: 0.7em 0.7em 0.7em 0em;
     white-space: pre-wrap;
     overflow-wrap: anywhere;
-    word-break: break-word;
+    word-break: normal;
     font-weight: normal;
     font-size: .91em;
     font-feature-settings: normal;
     font-variant: normal;
     text-align: left;
+    
 }
-
+@media screen and (min-width: 1000px) {
+    .cs-message__content {
+      max-width: 90%;
+    }
+  }
 .cs-message--outgoing .cs-message__content {
     color: whitesmoke;
     background-color: #1019A3;
     border-radius: 0.7em 0.7em 0em 0.7em;
+    max-width: 100%;
 }
 
 .body {
@@ -55,6 +62,7 @@
     color: #090b24;
     background-color: #090b24;
     padding: 20px;
+    
 }
 
 .footer {
@@ -121,3 +129,4 @@
     display: flex;
     flex-direction: row;
 }
+
